Replace deprecated wrapper class constructors with factory methods (#11)
* Initial plan

* Fix deprecated wrapper class constructors (Integer, Long, Double, Boolean)

Co-authored-by: MichaelBischoffArvato <36196361+MichaelBischoffArvato@users.noreply.github.com>

* Address code review: use Object instead of Integer for synchronization lock

Co-authored-by: MichaelBischoffArvato <36196361+MichaelBischoffArvato@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: MichaelBischoffArvato <36196361+MichaelBischoffArvato@users.noreply.github.com>